<resources>
    <string name="app_name">KotlinFirstApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="news">News</string>
    <string name="id_name">ID</string>
    <string name="spinner">Spinner</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="everything">Everything</string>
    <string name="topHeadlines">Top Headlines</string>
    <string name="settings">Settings</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="choiceCountry">Choose the country</string>
    <string name="choiceLanguage">Choose the language</string>
    <string name="all">All</string>
    <string name="drawer">Drawer</string>
    <string name="filter">Filter</string>
    <string name="relevancy">Relevancy</string>
    <string name="popularity">Popularity</string>
    <string name="primaryItemsCategoty">Category</string>
    <string name="sectionItems1">technology</string>
    <string name="sectionItems2">money</string>
    <string name="sectionItems3">sport</string>
    <string name="technology">Technology</string>
    <string name="money">Money</string>
    <string name="sport">Sport</string>
    <string name="eat">Eat</string>
    <string name="city">City</string>
    <string name="fashion">Fashion</string>
    <string name="traveling">Traveling</string>
    <string name="health">Health</string>
    <string name="kotlinFirstApp">KotlinFirstApp</string>
    <string name="no_news">No News</string>
    <string name="no_source">No Source</string>
    <string name="header_category">Categories of News</string>
    <string name="server_problem">Ouch! Its problems with the Internet!</string>
    <string name="try_again">try again</string>
    <string name="warning">Ouch! It\'s problems with the Internet!</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="every_thing">everything</string>
    <string name="top__headlines">top-headlines</string>
</resources>
